...
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="vI3-Ae-3PK">
                                        <rect key="frame" x="0.0" y="0.0" width="333" height="137"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please enter user name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Jgt-rY-ML9">
                                                <rect key="frame" x="0.0" y="0.0" width="333" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="textUserName" label="textUserName"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                <textInputTraits key="textInputTraits"/>
                                                <variation key="heightClass=compact-widthClass=regular">
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                </variation>
                                                <variation key="heightClass=regular-widthClass=compact">
...
                                                <connections>
                                                    <action selector="textFieldEndEditing:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="6Li-lB-8Wo"/>
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please enter password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="12Q-ap-AzY">
                                                <rect key="frame" x="0.0" y="54" width="333" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="txtPassword" label="txtPassword"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                                <variation key="heightClass=compact-widthClass=regular">
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                </variation>
                                                <variation key="heightClass=regular-widthClass=compact">
...
                                            </button>
                                        </subviews>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fxh-6p-TBM">
                                        <rect key="frame" x="0.0" y="156.99999999999997" width="333" height="40"/>
                                        <color key="backgroundColor" name="InspectionAppColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btnLoginRegister"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="7iu-HR-aX7"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Login"/>
...
                                    <outlet property="delegate" destination="TsL-CG-PiH" id="Jtt-Qj-elN"/>
                                </connections>
                            </tableView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="b18-dd-DWH"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="inspectionListView" label="inspectionListView"/>
                        <constraints>
                            <constraint firstItem="mc5-gg-Agw" firstAttribute="leading" secondItem="uNJ-1k-ass" secondAttribute="leading" id="456-zA-q3C"/>
                            <constraint firstItem="b18-dd-DWH" firstAttribute="trailing" secondItem="mc5-gg-Agw" secondAttribute="trailing" id="5Ch-Is-1VV"/>
                            <constraint firstAttribute="bottom" secondItem="mc5-gg-Agw" secondAttribute="bottom" id="9hc-fe-Vms"/>
                            <constraint firstItem="mc5-gg-Agw" firstAttribute="top" secondItem="b18-dd-DWH" secondAttribute="top" id="UAi-73-2b7"/>
                        </constraints>
...
