...
    @MainActor
    func presentAlert(message : String , completion : (()->Void)? = nil ) {
        DispatchQueue.main.async { [weak self] in
            
            guard let self = self else { return }
            // Create the alert controller
            let alert = UIAlertController(title: "Inspections Demo", message: message , preferredStyle: .alert)
            alert.accessibilityLabel = "alertVC"
            
            let okAction = UIAlertAction(title: "OK", style: .default) { _ in
                completion?()
            }
            alert.addAction(okAction)
            
            // Present the alert
            self.present(alert, animated: true, completion: nil)
...
