...
    func validateCredentials() -> LOGIN_VALIDATION_ERROR? {
        
        guard let userName = self.userName ,
              !userName.isEmpty ,
              userName.count > 6  else{
            
            return .passwordFailed("Please enter valid email")
        }
        
        guard let password = self.password,
              !password.isEmpty,
              password.count > 6  else{
            
...
